feat: optimize write logic